# HOTELSYSTEM

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  composer.json  docker-compose.yml  docker-setup.sh  env  index.html  package-lock.json  package.json  phpcs.xml  phpstan.neon  phpunit.xml  tailwind.config.js  vite.config.js
.github/workflows/: main.yml
app/Console/: Kernel.php
app/Events/: RoomMaintenanceScheduled.php
app/Exceptions/: Handler.php
app/Http/: Kernel.php
app/Jobs/: GenerateBookingDocuments.php  ProcessRoomImage.php  SendReservationConfirmationEmail.php
app/Listeners/: NotifyMaintenanceTeam.php
app/Mail/: ReservationConfirmation.php
app/Models/: Booking.php  MaintenanceCategory.php  MaintenanceInventory.php  MaintenanceInventoryLog.php  MaintenanceLog.php  MaintenanceTask.php  Payment.php  Room.php  RoomBlock.php  RoomPriceHistory.php  RoomSpecialPrice.php  RoomType.php  RoomWaitlist.php  SkillVerification.php  StaffSkill.php  User.php
app/Notifications/: InventoryLowStock.php  MaintenanceScheduled.php  MaintenanceTaskAssigned.php  MaintenanceTaskCompleted.php  SkillVerificationNeeded.php
app/Policies/: BookingPolicy.php
app/Providers/: AuthServiceProvider.php
config/: api.php  app.php  backup.php  cache.php  cors.php  l5-swagger.php  logging.php  seo.php  stripe.php
docker/: supervisord.conf
docker/mysql/: my.cnf
public/: robots.txt  sitemap.xml
public/src/API's/: CMakeLists.txt
routes/: api.php  web.php
scripts/: generate-ssl-certs.sh
src/: App.css  main.js  main.jsx  main.tsx
tests/: TestCase.php
(+139 files in other folders)
